# HedgeDB

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  bloom_filter.cc  bloom_filter.h  common.cc  common.h  compile.txt  coro_io_iouring.cc  database.cc  database.h  db_design  executor_read_test.cc  executor_test.cc  file_reader.cc  file_reader.h  from_disk_test.cc  fs.hpp  hedge_schema.excalidraw  index.cc  index.h  install_jemalloc.sh  install_liburing.sh  io_executor.cc  io_executor.h  mailbox.h  mailbox_impl.cc  mailbox_impl.h  main.cc  main_database.cc  merge_utils.h  paginated_view.cc  paginated_view.h  tables.cc  tables.h  tables.hashexperiment.cc  (+11 more)
.github/workflows/: build.yml  tests.yml
api/: api.cc  api.h  config.h
benchtool/: common.h  compaction.cc  delete.cc  keygen.h  load.cc  load_timeseries.cc  main.cc  modes.h  range.cc  range_timeseries.cc  read.cc  registry.cc  rw.cc  utils.cc  utils.h
bindings/go/: hedgedb.go  hedgedb_test.go
bindings/go/cmd/hedgebench/: main.go
example/: CMakeLists.txt  main.cc
examples/: hello_world.cc
experiments/: asio_test.cc  asio_test_2.cc  coro_io.cc  coro_io_.cc  coro_io_advanced.cc  coro_io_iouring.cc  coro_io_scheduler_done.cc  coro_test.cc  coro_test_basic.cc  coro_test_book.cc  coro_test_chain.cc  merge_strategy_test.cc  tables.hashexperiment.cc  tables.hashexperiment.h  uring_test.cc
include/: error.hpp  hedge_c.h  logger.h  perf_counter.h  size_literals.h  skiplist.h  types.h  uuid.h
include/api/: api.h  config.h
include/async/: async_cond_var.h  atomic.h  generator.h  io_executor.h  io_executor.h.deprecated  mailbox.h  mailbox_impl.h  mpsc.h  rw_sync.h  spinlock.h  task.h  wait_group.h  worker.h
include/db/: database.h  range_iterator.h
include/io/: io_ctx.h  io_executor.h  io_requests.hpp  io_requests_impl.h  static_pool.h
rocksdb/: CMakeLists.txt  benchtool.cc  build.sh
src/: benchtool.cc  cache.cc  cache.h  common.cc  common.h  database.cc  database_perf_test.cc  database_perf_test_mixed.cc  database_perf_test_mixed_batch.cc  database_perf_test_threads.cc  executor_read_test.cc  file_reader.h  fs.hpp  io_executor.cc  key.h  mailbox_impl.cc  mailbox_impl.h  main.cc  manual_ctx.h  memtable_perf_test.cc  memtable_perf_test_threads.cc  overloaded.h  page_aligned_buffer.h  perf_counter.cc  single_buffer_arena_allocator.h  skiplist_executor_test.cc  types.h  utils.cc  utils.h  value_table.cc  working_group.h
src/api/: api.cc
src/async/: io_executor.cc  io_executor.h  mailbox_impl.cc  rw_sync.h  spinlock.h  tmc.cc  tmc_defs.cc  worker.cc
src/benchtool/: common.h  keygen.h  load.cc  main.cc  modes.h  range.cc  read.cc  rw.cc  utils.cc  utils.h
src/capi/: hedge_c.cc
src/db/: arena_allocator.h  block.cc  block.h  btree.h  buffer_pool.h  cache.cc  cache.h  database.cc  database.h  hasher.h  index.cc  index.h  index_ops.cc  index_ops.h  index_ops2.cc  mem_index.cc  mem_index.h  memtable.cc  memtable.h  memtable_flusher.h  merge_utils.h  page_cache.h  qf.cc  qf.h  quotient_filter.cc  quotient_filter.h  range_iterator.cc  range_iterator.h  scan_iterator.cc  scan_iterator.h  skiplist.h  sorted_index.cc  sorted_index.h  sst.cc  sst.h  sst_manager.cc  sst_manager.h  sst_manager_loader.cc  stack_allocator.h  value_table.cc  (+4 more)
src/db/bloomfilter/: MurmurHash3.cc  bloom_filter.cc  bloom_filter.h
src/db/folly/concurrent_skip_list/: concurrent_skiplist.h  iterators.h  micro_spin_lock.h  skiplist_details.h
src/db/merge/: merge.cc  merge2.cc  merge_utils.h  rolling_buffer.h  sst_stream.h  sst_stream_reader.h  write_buffer.h  write_buffer.h.2
src/db/skiplist/concurrent_skip_list/: checks.h  concurrent_skiplist.h  iterators.h  micro_spin_lock.h  skiplist_details.h
src/details/: notify.h
src/fs/: file_reader.cc  file_reader.h  file_reader2.cc  file_reader2.h  fs.cc  fs.hpp  stream_reader.cc  stream_reader.h
src/include/: logger.h
src/io/: io_executor.cc  io_requests_impl.h  static_pool.cc
streamer/: main.cc
test/: api.spec.cc  block.spec.cc  block_test.cc  btree.spec.cc  cache.spec.cc  concurrent_skiplist.spec.cc  concurrent_skiplist_test.cc  database.spec.cc  database_test.cc  executor_read_test.cc  file_reader.spec.cc  file_reader2.spec.cc  file_reader2_test.cc  index.spec.cc  index2.spec.cc  index_delete.spec.cc  index_merge.spec.cc  index_merge_test.cc  index_test.cc  io_executor.spec.cc  key.spec.cc  mpsc.spec.cc  page_aligned_buffer.spec.cc  page_aligned_buffer_test.cc  paginated_view.spec.cc  range_scan.spec.cc  range_scan_test.cc  rolling_buffer.spec.cc  rw_sync.spec.cc  rw_sync_test.cc  skiplist.spec.cc  sst_stream_test.cc  sst_test.cc  stream_reader_test.cc  value_table.spec.cc  varint.spec.cc  varint_test.cc  version_history.spec.cc  version_history_test.cc  wal_replay.spec.cc  (+2 more)
